syntax = "proto3";

package hatchet;

import "crossplane/deployment.proto";
import "database/cluster.proto";
import "database/instance.proto";
import "database/postgres.proto";
import "hatchet/hatchet.proto";
import "stroppy/test.proto";
import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/hatchet";


message Software {
    enum SetupStrategy {
        SETUP_STRATEGY_UNSPECIFIED = 0;
        SETUP_STRATEGY_INSTALL = 1;
        SETUP_STRATEGY_INSTALL_AND_START = 2;
    }
    SetupStrategy setup_strategy = 1;
    oneof software {
        option (validate.required) = true;
        database.Postgres.Instance postgres = 2;
        database.Sidecar sidecar = 3;
        database.Infra infra = 4;
        stroppy.StroppyCli stroppy = 5;
    }
}

message EdgeWorker {
    string worker_name = 1 [(validate.rules).string.min_len = 1];
    repeated EdgeTasks.Identifier acceptable_tasks = 2 [(validate.rules).repeated.min_items = 1];
    crossplane.Hardware hardware = 3 [(validate.rules).message.required = true];
    repeated Software software = 4 [(validate.rules).repeated.items.message.required = true];
    map<string, string> metadata = 6;
}

message EdgeWorkersSet {
    repeated EdgeWorker edge_workers = 1 [(validate.rules).repeated.min_items = 1];
}

message DeployedEdgeWorker {
    EdgeWorker worker = 1 [(validate.rules).message.required = true];
    crossplane.Vm deployment = 2 [(validate.rules).message.required = true];
}

message DeployedEdgeWorkersSet {
    crossplane.Deployment deployment = 1 [(validate.rules).message.required = true];
    repeated DeployedEdgeWorker deployed_edge_workers = 2 [(validate.rules).repeated.min_items = 1];
}

/*
    Standalone tasks used in edge worker
*/
message EdgeTasks {
    enum Kind {
        KIND_UNSPECIFIED = 0;
        SETUP_SOFTWARE = 1;
        RUN_STROPPY = 2;
    }
    message Identifier {
        string run_id = 1 [(validate.rules).string.min_len = 1];
        string task_id = 2 [(validate.rules).string.min_len = 1];
        EdgeTasks.Kind kind = 3 [(validate.rules).enum.defined_only = true];
    }
    /*
        Install software on edge worker
    */
    message InstallSoftware {
        message Input {
            Common common = 1 [(validate.rules).message.required = true];
            repeated Software software = 2 [(validate.rules).repeated.items.message.required = true];
        }
        message Output {}
    }

    /*
        Run stroppy test on edge worker
    */
    message RunStroppy {
        message Input {
            Common common = 1 [(validate.rules).message.required = true];
            stroppy.StroppyCli stroppy_cli_call = 2 [(validate.rules).message.required = true];
        }
        message Output {
            stroppy.TestResult result = 1 [(validate.rules).message.required = true];
        }
    }
}

